--- a/credits.html
+++ b/credits.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/credits.css">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/tresasure.css">
 </head>
 <body>
-    <h1>You did it!
-        <br>Enjoy your tresasure!
-    </h1>
-        <a href="/html/credits.html"><img src="/img/props/keyhole.png" alt="keyhole" class="key"></a>
+    <embed src="img/backgrounds/credits.mp4"></embed>
 </body>
 </html>
