--- a/treasure.html
+++ b/treasure.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/credits.css">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/tresasure.css">
 </head>
 <body>
-    <embed src="/img/backgrounds/credits.mp4"></embed>
+    <h1>You did it!
+        <br>Enjoy your tresasure!
+    </h1>
+        <a href="credits.html"><img src="img/props/keyhole.png" alt="keyhole" class="key"></a>
 </body>
 </html>
